; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_subtitle_add_ssa_header.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_subtitle_add_ssa_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i64 }

@.str = private unnamed_addr constant [475 x i8] c"[Script Info]\0D\0AScriptType: v4.00+\0D\0ACollisions: Normal\0D\0APlayResX: %d\0D\0APlayResY: %d\0D\0ATimer: 100.0\0D\0AWrapStyle: 0\0D\0A\0D\0A[V4+ Styles]\0D\0AFormat: Name, Fontname, Fontsize, PrimaryColour, SecondaryColour, OutlineColour, BackColour, Bold, Italic, Underline, StrikeOut, ScaleX, ScaleY, Spacing, Angle, BorderStyle, Outline, Shadow, Alignment, MarginL, MarginR, MarginV, Encoding\0D\0AStyle: Default,%s,%d,&H00FFFFFF,&H00FFFFFF,&H000F0F0F,&H000F0F0F,0,0,0,0,100,100,0,0.00,1,2,3,2,20,20,20,0\0D\0A\00", align 1
@.str.1 = private unnamed_addr constant [42 x i8] c"hb_subtitle_add_ssa_header: malloc failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hb_subtitle_add_ssa_header(%struct.TYPE_3__* %0, i8* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = call i32 @free(i32* %15)
  store i8* getelementptr inbounds ([475 x i8], [475 x i8]* @.str, i64 0, i64 0), i8** %12, align 8
  %17 = load i8*, i8** %12, align 8
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = load i8*, i8** %8, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i64 @hb_strdup_printf(i8* %17, i32 %18, i32 %19, i8* %20, i32 %21)
  %23 = inttoptr i64 %22 to i32*
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  store i32* %23, i32** %25, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = icmp eq i32* %28, null
  br i1 %29, label %30, label %32

30:                                               ; preds = %5
  %31 = call i32 @hb_error(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %6, align 4
  br label %41

32:                                               ; preds = %5
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32*, i32** %34, align 8
  %36 = bitcast i32* %35 to i8*
  %37 = call i64 @strlen(i8* %36)
  %38 = add nsw i64 %37, 1
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  store i64 %38, i64* %40, align 8
  store i32 1, i32* %6, align 4
  br label %41

41:                                               ; preds = %32, %30
  %42 = load i32, i32* %6, align 4
  ret i32 %42
}

declare dso_local i32 @free(i32*) #1

declare dso_local i64 @hb_strdup_printf(i8*, i32, i32, i8*, i32) #1

declare dso_local i32 @hb_error(i8*) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
